# api/docs/swagger.json
@@ -463,6 +463,40 @@
                 }
             }
         },
+        "/api/v1/auth/post/update": {
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "posts"
+                ],
+                "summary": "Update post",
+                "responses": {
+                    "202": {
+                        "description": "Accepted"
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/server.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/server.Error"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/server.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/auth/posts/create": {
             "post": {
                 "consumes": [
@@ -519,6 +553,56 @@
                 }
             }
         },
+        "/api/v1/auth/posts/selected/add": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "posts"
+                ],
+                "summary": "GetAll post",
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/auth/posts/selected/delete": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "posts"
+                ],
+                "summary": "GetAll post",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/auth/posts/{id}": {
             "get": {
                 "produces": [
@@ -527,7 +611,7 @@
                 "tags": [
                     "posts"
                 ],
-                "summary": "Get post",
+                "summary": "GetAll post",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -887,10 +971,12 @@
             "required": [
                 "content",
                 "id",
-                "title",
-                "user_id"
+                "title"
             ],
             "properties": {
+                "community_id": {
+                    "type": "string"
+                },
                 "content": {
                     "type": "string"
                 },
