# api/internal/app/server/post.go
@@ -2,6 +2,7 @@ package server
 
 import (
 	"errors"
+	"fmt"
 	"net/http"
 	"social-network/internal/model"
 	"social-network/pkg/validator"
@@ -49,6 +50,55 @@ func (s *Server) createPost() http.HandlerFunc {
 	}
 }
 
+// updatePost deletes post
+//
+// @Summary Update post
+// @Tags posts
+// @Produce json
+// @Success 202
+// @Failure 401 {object} Error
+// @Failure 403 {object} Error
+// @Failure 422 {object} Error
+// @Router /api/v1/auth/post/update [put]
+func (s *Server) updatePost() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var post model.Post
+		userID, ok := r.Context().Value(ctxUserID).(string)
+		if !ok {
+			s.error(w, http.StatusUnauthorized, errors.New("unauthorized"))
+			return
+		}
+
+		if err := s.decode(r, &post); err != nil {
+			s.error(w, http.StatusUnprocessableEntity, err)
+			return
+		}
+
+		if err := validator.Validate(post); err != nil {
+			s.error(w, http.StatusUnprocessableEntity, err)
+			return
+		}
+
+		p, err := s.store.Post().Get(post.ID)
+		if err != nil {
+			s.error(w, http.StatusUnprocessableEntity, err)
+			return
+		}
+
+		if p.UserID != userID {
+			s.error(w, http.StatusForbidden, errors.New("not allowed to update post"))
+			return
+		}
+
+		if err = s.store.Post().Update(&post, s.types.Privacy.Values[post.Privacy]); err != nil {
+			s.error(w, http.StatusUnprocessableEntity, err)
+			return
+		}
+
+		s.respond(w, http.StatusAccepted, nil)
+	}
+}
+
 // deletePost deletes post
 //
 // @Summary Delete post
@@ -71,7 +121,7 @@ func (s *Server) deletePost() http.HandlerFunc {
 
 // getPost deletes post
 //
-// @Summary Get post
+// @Summary GetAll post
 // @Tags posts
 // @Produce json
 // @Success 200 {object} model.Post
@@ -90,6 +140,15 @@ func (s *Server) getPost() http.HandlerFunc {
 	}
 }
 
+// addSelected
+//
+// @Summary GetAll post
+// @Tags posts
+// @Accept json
+// @Produce json
+// @Success 201
+// @Failure 500 {object} Error
+// @Router /api/v1/auth/posts/selected/add [post]
 func (s *Server) addSelected() http.HandlerFunc {
 	type requestBody struct {
 		UserList []model.User `json:"user_list"`
@@ -98,7 +157,7 @@ func (s *Server) addSelected() http.HandlerFunc {
 
 	return func(w http.ResponseWriter, r *http.Request) {
 		reqBody := requestBody{}
-		if err := s.decode(r, reqBody); err != nil {
+		if err := s.decode(r, &reqBody); err != nil {
 			s.error(w, http.StatusInternalServerError, err)
 			return
 		}
@@ -112,7 +171,16 @@ func (s *Server) addSelected() http.HandlerFunc {
 	}
 }
 
-func (s *Server) removeSelected() http.HandlerFunc {
+// deleteSelected
+//
+// @Summary GetAll post
+// @Tags posts
+// @Accept json
+// @Produce json
+// @Success 204
+// @Failure 500 {object} Error
+// @Router /api/v1/auth/posts/selected/delete [post]
+func (s *Server) deleteSelected() http.HandlerFunc {
 	type requestBody struct {
 		UserList []model.User `json:"user_list"`
 		ParentID string       `json:"parent_id"`
@@ -120,11 +188,11 @@ func (s *Server) removeSelected() http.HandlerFunc {
 
 	return func(w http.ResponseWriter, r *http.Request) {
 		reqBody := requestBody{}
-		if err := s.decode(r, reqBody); err != nil {
+		if err := s.decode(r, &reqBody); err != nil {
 			s.error(w, http.StatusInternalServerError, err)
 			return
 		}
-
+		fmt.Println(reqBody)
 		if err := s.store.Post().RemoveSelected(&reqBody.UserList, reqBody.ParentID); err != nil {
 			s.error(w, http.StatusInternalServerError, err)
 			return
